--- a/JavascriptPatterns/design-patterns/command.html
+++ b/JavascriptPatterns/design-patterns/command.html
@@ -38,7 +38,31 @@
 			})();
 
 			// reference
-			// http://www.addyosmani.com/resources/essentialjsdesignpatterns/book/#commandpatternjavascript
+		    // http://www.addyosmani.com/resources/essentialjsdesignpatterns/book/#commandpatternjavascript
+
+			(function () {
+
+			    var CarManager = {
+
+			        // request information
+			        requestInfo: function (model, id) {
+			            return "The information for " + model + " with ID " + id + " is foobar";
+			        },
+
+			        // purchase the car
+			        buyVehicle: function (model, id) {
+			            return "You have successfully purchased Item " + id + ", a " + model;
+			        },
+
+			        // arrange a viewing
+			        arrangeViewing: function (model, id) {
+			            return "You have successfully booked a viewing of " + model + " ( " + id + " ) ";
+			        }
+
+			    };
+
+			})();
+
 		</script>
 	</body>
 </html>
