--- a/JavascriptPatterns/design-patterns/mediator.html
+++ b/JavascriptPatterns/design-patterns/mediator.html
@@ -1,91 +1,154 @@
 ﻿<!doctype html>
 <html lang="en">
-	<head>
-		<title>JavaScript Patterns</title>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<script>
-			/* Title: Mediator
-			 Description: allows loose coupling between classes by being the only class that has detailed knowledge of their methods
-			 */
+<head>
+    <title>JavaScript Patterns</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <script>
+        var mediator = (function () {
 
-			function Player(name) {
-				this.points = 0;
-				this.name = name;
-			}
-			Player.prototype.play = function () {
-				this.points += 1;
-				mediator.played();
-			};
-			var scoreboard = {
+            // Storage for topics that can be broadcast or listened to
+            var topics = {};
 
-				// HTML element to be updated
-				element:document.getElementById('results'),
+            // Subscribe to a topic, supply a callback to be executed
+            // when that topic is broadcast to
+            var subscribe = function (topic, fn) {
 
-				// update the score display
-				update:function (score) {
-					var i, msg = '';
-					for (i in score) {
-						if (score.hasOwnProperty(i)) {
-							msg += '<p><strong>' + i + '<\/strong>: ';
-							msg += score[i];
-							msg += '<\/p>';
-						}
-					}
-					this.element.innerHTML = msg;
-				}
-			};
+                if (!topics[topic]) {
+                    topics[topic] = [];
+                }
 
-			var mediator = {
+                topics[topic].push({ context: this, callback: fn });
 
-				// all the player
-				players:{},
+                return this;
+            };
 
-				// initialization
-				setup:function () {
-					var players = this.players;
-					players.home = new Player('Home');
-					players.guest = new Player('Guest');
-				},
+            // Publish/broadcast an event to the rest of the application
+            var publish = function (topic) {
 
-				// someone plays, update the score
-				played:function () {
-					var players = this.players,
-							score = {
-								Home:players.home.points,
-								Guest:players.guest.points
-							};
+                var args;
 
-					scoreboard.update(score);
-				},
+                if (!topics[topic]) {
+                    return false;
+                }
 
-				// handle user interactions
-				keypress:function (e) {
-					e = e || window.event; // IE
-					if (e.which === 49) { // key "1"
-						mediator.players.home.play();
-						return;
-					}
-					if (e.which === 48) { // key "0"
-						mediator.players.guest.play();
-						return;
-					}
-				}
-			};
+                args = Array.prototype.slice.call(arguments, 1);
+                for (var i = 0, l = topics[topic].length; i < l; i++) {
 
-			// go!
-			mediator.setup();
-			window.onkeypress = mediator.keypress;
+                    var subscription = topics[topic][i];
+                    subscription.callback.apply(subscription.context, args);
+                }
+                return this;
+            };
 
-			// game over in 30 seconds
-			setTimeout(function () {
-				window.onkeypress = null;
-				console.log('Game over!');
-			}, 30000);
+            return {
+                publish: publish,
+                subscribe: subscribe,
+                installTo: function (obj) {
+                    obj.subscribe = subscribe;
+                    obj.publish = publish;
+                }
+            };
 
-			// reference
-			// http://shop.oreilly.com/product/9780596806767.do?sortby=publicationDate
-		</script>
-	</body>
+        }());
+
+        mediator.subscribe("salut", function () {
+            alert('ciao');
+        });
+        mediator.subscribe("salut", function () {
+            alert('hello');
+        });
+
+        mediator.subscribe("welcome", function () {
+            alert('prego');
+        });
+
+
+        mediator.publish("salut");
+
+    </script>
+    <script>
+        /* Title: Mediator
+         Description: allows loose coupling between classes by being the only class that has detailed knowledge of their methods
+         */
+
+        function Player(name) {
+            this.points = 0;
+            this.name = name;
+        }
+        Player.prototype.play = function () {
+            this.points += 1;
+            mediator.played();
+        };
+        var scoreboard = {
+
+            // HTML element to be updated
+            element: document.getElementById('results'),
+
+            // update the score display
+            update: function (score) {
+                var i, msg = '';
+                for (i in score) {
+                    if (score.hasOwnProperty(i)) {
+                        msg += '<p><strong>' + i + '<\/strong>: ';
+                        msg += score[i];
+                        msg += '<\/p>';
+                    }
+                }
+                this.element.innerHTML = msg;
+            }
+        };
+
+        var mediator = {
+
+            // all the player
+            players: {},
+
+            // initialization
+            setup: function () {
+                var players = this.players;
+                players.home = new Player('Home');
+                players.guest = new Player('Guest');
+            },
+
+            // someone plays, update the score
+            played: function () {
+                var players = this.players,
+                        score = {
+                            Home: players.home.points,
+                            Guest: players.guest.points
+                        };
+
+                scoreboard.update(score);
+            },
+
+            // handle user interactions
+            keypress: function (e) {
+                e = e || window.event; // IE
+                if (e.which === 49) { // key "1"
+                    mediator.players.home.play();
+                    return;
+                }
+                if (e.which === 48) { // key "0"
+                    mediator.players.guest.play();
+                    return;
+                }
+            }
+        };
+
+        // go!
+        mediator.setup();
+        window.onkeypress = mediator.keypress;
+
+        // game over in 30 seconds
+        setTimeout(function () {
+            window.onkeypress = null;
+            console.log('Game over!');
+        }, 30000);
+
+        // reference
+        // http://shop.oreilly.com/product/9780596806767.do?sortby=publicationDate
+    </script>
+</body>
 </html>
